posts/20230315-windows-installer-wix/index.qmd

--- a/posts/20230315-windows-installer-wix/index.qmd
+++ b/posts/20230315-windows-installer-wix/index.qmd
@@ -5,7 +5,7 @@ author:
   - name: J-M
     url: {}
 date: "2023-03-16"
-categories: ["C++", "memory", "safety"]
+categories: ["WiX", "installers", ""]
 format: 
   html:
     toc: true
@@ -13,23 +13,28 @@ engine: knitr
 draft: false
 ---
 
-!["WiX logo"](https://avatars.githubusercontent.com/u/91997072?s=200&v=4 "C++ logo")
+!["WiX logo"](https://avatars.githubusercontent.com/u/91997072?s=200&v=4 "WiX logo")
 
 # Background
 
-"We" are looking to make the [software stack for streamflow forecasting](https://github.com/csiro-hydroinformatics/streamflow-forecasting-tools-onboard/) installable on Windows via an installer, with code signing. There are multiple motivations for this, some of it is perceptions and first impressions for new users. More importantly the code signing and managed installation are particularly important for some users in an operational environment (hydro-electric production, water management).
+The [software stack for streamflow forecasting](https://github.com/csiro-hydroinformatics/streamflow-forecasting-tools-onboard/) will be made installable on Windows via an installer, with code signing. There are multiple motivations for this, some of it is perceptions and first impressions for new users. More importantly code signing and managed installation are particularly important for some users in an operational environment (hydro-electric production, water management).
 
 I used to produce installable .NET applications way back, but I've lost sight of where the state of play is these days. Besides, the stack is not .NET, so it is sime to revisit the field.
 
 # Quick review and resources
 
-One list of available installation software is via [Wikipedia list of installation software](https://en.wikipedia.org/wiki/List_of_installation_software). [Orca](https://en.wikipedia.org/wiki/Windows_Installer) seems to be the successor of what I used to use (Windows Installer) from Visual Studio way back. [WiX](https://en.wikipedia.org/wiki/WiX) is a FOSS option, and version 4 has release candidates as I write. The venerable [Innosetup](https://jrsoftware.org/isinfo.php) is also an option. [NSIS](https://en.wikipedia.org/wiki/Nullsoft_Scriptable_Install_System): I think the NSIS option was what I previously used  under the hood of what [`electron-builder`](https://www.electron.build/), see [this previous blog post](https://jmp75.github.io/work-blog/posts/20221116-waa-installers/) for context, but I may be wrong about that.
+One list of available installation software is via [Wikipedia list of installation software](https://en.wikipedia.org/wiki/List_of_installation_software). Paid options may be in scope if this brings value, but I'll first cover open source or "freeware" types. Prior to this port and _a priori_ I considered:
 
-I am partial to trying WiX, and also because this is one of the non-proprietary options that produces a Windows Installer.
+* [Orca](https://en.wikipedia.org/wiki/Windows_Installer) seems to be the successor of what I used to use (Windows Installer) from Visual Studio way back. 
+* [WiX](https://en.wikipedia.org/wiki/WiX) is a FOSS option, and version 4 has release candidates as I write. 
+* The venerable [Innosetup](https://jrsoftware.org/isinfo.php).
+* [NSIS](https://en.wikipedia.org/wiki/Nullsoft_Scriptable_Install_System) is also a possible candidate. I think the NSIS option was what I previously used  under the hood of what [`electron-builder`](https://www.electron.build/), see [this previous blog post](https://jmp75.github.io/work-blog/posts/20221116-waa-installers/) for context, but I may be wrong about that.
 
-## WiX 
+I am partial to trying WiX for this and follow-up post. This is one of the non-proprietary options that produces a Windows Installer.
 
-Version 3 of the WiX toolset is mostly [documented](https://wixtoolset.org/docs/wix3) as of March 2023, V4 is understanbly not as well documented. I was looking for "cheap" options, i.e. adapting a suitable template, but did not find this kind of resource in the WiX doc. A very good third party resource I found is [WiX Installer Examples](https://github.com/kurtanr/WiXInstallerExamples). It is based in WiX 3 for now, but a resource I am likely to look at even if I trial WiX version 4.
+## WiX
+
+Version 3 of the WiX toolset is mostly [documented](https://wixtoolset.org/docs/wix3) as of March 2023, V4 is understanbly not as well documented. Notwithing this I was still looking for "cheap" options, i.e. adapting from a suitable template, but did not find this kind of resource in the WiX doc. A very good third party resource I found is [WiX Installer Examples](https://github.com/kurtanr/WiXInstallerExamples). It is based in WiX 3 for now, but a resource I am likely to look at even if I trial WiX version 4.
 
 A useful resource to get acquainted with WiX 4, as I write, is a [playlist of coding dojos](https://www.youtube.com/watch?v=x-E7g5H_1TA&list=PLDlzbQXIs18slmqmdlS10_de_Cps-QRg6) (note that episodes are in reverse chronological order) by the [lead developer of WiX, Rob Mensching](https://www.youtube.com/@meschine). The code repository used for the successive sessions may be [here](https://github.com/DeploymentDojo/BeltTest). Note that as these videos were posted weekly, WiX 4 was in preview, so expect that some things there may change, and have changed as we'll see below.
 
@@ -45,15 +50,13 @@ Let's adapt a simple installer as per the dojos, and get one of our compiled sof
 
 ## Windows Sandbox
 
-The dojo playlist has an entry on [Building a windows sandbox](https://youtu.be/mn3pA4ABNtQ?list=PLDlzbQXIs18slmqmdlS10_de_Cps-QRg6). Sounds like a very good idea. Following the [Windows Sandbox MS doc](https://learn.microsoft.com/en-us/windows/security/threat-protection/windows-sandbox/windows-sandbox-overview).
-
-I will only give the essential steps, checking the video gives more information.
+The dojo playlist has an episode on [Building a windows sandbox](https://youtu.be/mn3pA4ABNtQ?list=PLDlzbQXIs18slmqmdlS10_de_Cps-QRg6). I did not know about this, and this sounds like a very good idea. I will only give the essential steps, checking the video gives more information. Following the [Windows Sandbox MS doc](https://learn.microsoft.com/en-us/windows/security/threat-protection/windows-sandbox/windows-sandbox-overview):
 
 in PowerShell as Administrator : 
 
 ::: {.callout-warning}
 
-**CAUTION**: the following powershell admin command below will reboot your machine without asking permission.
+**CAUTION**: the following powershell admin command below may reboot your machine without asking permission.
 
 ```powershell
 Enable-WindowsOptionalFeature -FeatureName "Containers-DisposableClientVM" -All -Online
@@ -90,7 +93,7 @@ start "" "C:\Program Files (x86)"
 
 ## Step 1
 
-Starting from https://youtu.be/IXc6_i0Pm4E?list=PLDlzbQXIs18slmqmdlS10_de_Cps-QRg6 to adapt to my context
+Starting from [the wsx file in Rob's dojo video](https://youtu.be/IXc6_i0Pm4E?t=933) to adapt to my context:
 
 ```xml
 <Wix xmlns="http://wixtoolset.org/schemas/v4/wxs">
@@ -113,7 +116,7 @@ Starting from https://youtu.be/IXc6_i0Pm4E?list=PLDlzbQXIs18slmqmdlS10_de_Cps-QR
 
 error WIX0005: The Wix element contains an unexpected child element 'StandardDirectory'.
 
-On a hunch looking at the code repo, I reckon I may try to put the standarddirectory block inside a Fragment. No squigly line anymore.
+On a hunch after [looking at a subsequent version of the code github repo](https://github.com/DeploymentDojo/BeltTest/blob/75829b79027dcbcb559f7da6aff66752517999cf/BeltTest/BeltTestPackage/Folders.wxs), I reckon I should try to put the `StandardDirectory` block inside a `Fragment`. No squigly line anymore in Visual Studio is a good sign:
 
 ```xml
 <Wix xmlns="http://wixtoolset.org/schemas/v4/wxs">
@@ -134,7 +137,7 @@ On a hunch looking at the code repo, I reckon I may try to put the standarddirec
 </Wix>
 ```
 
-and it builds.
+and yes now it builds.
 
 ::: {.callout-warning}
 
@@ -144,4 +147,4 @@ Note: I first launched the "Add or Remove Programs" in the sandbox to check the 
 
 # Conclusion
 
-So far so good... 
+So far so good for baby step 1. To be continued.
