--- a/posts/20230319-windows-installer-wix/index.qmd
+++ b/posts/20230319-windows-installer-wix/index.qmd
@@ -182,7 +182,7 @@ If we install version `0.1.0.1` on top of `0.1`, the following happens:
 
 ![](wix4_013.png)
 
-I think this is exactly what Rob demonstrated, and I expected this. This is less intuitive to deduce what would happen if we install version `0.1.1.0` on top of `0.1`. And the result is:
+I think this is exactly what Rob demonstrated in his "The Problem with Same Version Upgrades" videos, and I expected this. This is less intuitive to deduce what would happen if we install version `0.1.1.0` on top of `0.1`. And the result is:
 
 ![](wix4_014.png)
 
