--- a/posts/20230330-windows-installer-wix/index.qmd
+++ b/posts/20230330-windows-installer-wix/index.qmd
@@ -11,6 +11,7 @@ format:
     toc: true
 engine: knitr
 draft: false
+image: https://avatars.githubusercontent.com/u/91997072?s=200&v=4
 ---
 
 !["WiX logo"](https://avatars.githubusercontent.com/u/91997072?s=200&v=4 "WiX logo")
